--- a/gestion-mercado/src/app/pages/pedido-pages/pedidos-form/pedidos-form.css
+++ b/gestion-mercado/src/app/pages/pedido-pages/pedidos-form/pedidos-form.css
@@ -344,3 +344,113 @@ section.detalles .botones-detalles button.btn-finalizar:hover {
   transform: translateY(-2px);
   background: linear-gradient(135deg, #86e65a 0%, #4aeec3 100%);
 }
+
+/* --- menu desplegable en celu | form pedido --- */
+.form-toggle {
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  padding: 1.5rem 2rem;
+  border-radius: 1rem;
+  background: rgba(255, 255, 255, 0.12);
+  backdrop-filter: blur(10px);
+  margin-bottom: 1rem;
+}
+
+.form-content {
+  overflow: hidden;
+  transition: max-height 0.35s ease;
+  max-height: 2000px;
+}
+
+.form-title {
+  text-align: center;
+  font-size: 2rem;
+  color: #fff;
+  margin-bottom: 1.5rem;
+}
+
+/* 901 px porque es cuando el form de pedidos pasa a estar arriba y se ve feo je*/
+@media (max-width: 901px) {
+  section.form {
+    min-height: auto !important;
+    height: auto !important;
+    width: 100% !important;
+  }
+  .form-toggle h2 {
+    margin: 0 !important;
+    font-size: 2rem !important;
+  }
+  .form-title {display: none;}
+
+  .form-toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+
+  .form-wrapper {
+    width: 100%;
+    overflow: hidden;
+    max-height: 2000px;
+    padding: 1.5rem;
+    transition: max-height .35s ease, padding .25s ease;
+    background: #1b0f1f;
+    border-radius: 1rem;
+  }
+
+  .form-wrapper.collapsed {
+    max-height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .form-content {
+    max-height: 2000px;
+    transition: max-height .35s ease;
+    width: 100%;
+  }
+
+  .form-content.collapsed {max-height: 0;}
+}
+
+/* --- menu detalles de pedido para el celular tonto --- */
+@media (max-width: 901px) {
+  section.detalles {
+    width: 100% !important;
+    padding: 1.5rem;
+    box-sizing: border-box;
+    margin-top: 1.5rem;
+  }
+
+  section.detalles h2 {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  section.detalles p {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .botones-detalles {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    margin-top: 1.5rem;
+  }
+
+  .botones-detalles button {
+    width: 100%;
+    padding: 0.8rem;
+    font-size: 1rem;
+  }
+}
+
+
