--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
@@ -17,35 +17,37 @@
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
   </div>
 
-  <table class="tabla">
-    <thead class="encabezado">
-      <tr>
-        <th>ID</th>
-        <th>CBU</th>
-        <th>Saldo</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-
-    <tbody class="tablaBody">
-      @for (c of cuentasFiltradas(); track $index) {
+  <div class="tabla-contenedor">
+    <table class="tabla">
+      <thead class="encabezado">
         <tr>
-          <td>{{c.cuentaBancariaId}}</td>
-          <td>{{c.cbu}}</td>
-          <td>{{c.saldo}}</td>
+          <th>ID</th>
+          <th>CBU</th>
+          <th>Saldo</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
 
-          <td class="botones">
-            <button class="btnEliminar" type="button" (click)="deleteCuentaBancaria(c.cuentaBancariaId)">Eliminar</button>
-            <button class="btnEditar" type="button" (click)="updateCuentaBancaria(c)">Editar</button>
-          </td>
-        </tr>
-      } @empty {
-        <tr>
-          <td colspan="4" class="sin-registros">
-            No se encontraron registros
-          </td>
-        </tr>
-      }
-    </tbody>
-  </table>
+      <tbody class="tablaBody">
+        @for (c of cuentasFiltradas(); track $index) {
+          <tr>
+            <td>{{c.cuentaBancariaId}}</td>
+            <td>{{c.cbu}}</td>
+            <td>{{c.saldo}}</td>
+
+            <td class="botones">
+              <button class="btnEliminar" type="button" (click)="deleteCuentaBancaria(c.cuentaBancariaId)">Eliminar</button>
+              <button class="btnEditar" type="button" (click)="updateCuentaBancaria(c)">Editar</button>
+            </td>
+          </tr>
+        } @empty {
+          <tr>
+            <td colspan="4" class="sin-registros">
+              No se encontraron registros
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </section>
