--- a/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
+++ b/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
@@ -18,43 +18,45 @@
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
   </div>
 
-  <table class="tabla">
-    <thead class="encabezado">
-      <tr>
-        <th>ID</th>
-        <th>Producto ID</th>
-        <th>Nombre</th>
-        <th>Cantidad</th>
-        <th>Stock Mínimo</th>
-        <th>Precio Venta</th>
-        <th>Costo Adquisición</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-
-    <tbody class="tablaBody">
-      @for (i of inventariosFiltrados(); track $index) {
+    <div class="tabla-contenedor">
+    <table class="tabla">
+      <thead class="encabezado">
         <tr>
-          <td>{{ i.inventario_id }}</td>
-          <td>{{ i.producto_id }}</td>
-          <td>{{ getNombreProducto(i.producto_id) }}</td>
-          <td>{{ i.cantidad }}</td>
-          <td>{{ i.stockMin }}</td>
-          <td>{{ i.precioVenta }}</td>
-          <td>{{ i.costoAdquisicion }}</td>
+          <th>ID</th>
+          <th>Producto ID</th>
+          <th>Nombre</th>
+          <th>Cantidad</th>
+          <th>Stock Mínimo</th>
+          <th>Precio Venta</th>
+          <th>Costo Adquisición</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
 
-          <td class="botones">
-            <button class="btnEliminar" (click)="deleteInventario(i.inventario_id)">Eliminar</button>
-            <button class="btnEditar" (click)="updateInventario(i)">Editar</button>
-          </td>
-        </tr>
-      } @empty {
-        <tr>
-          <td colspan="4" class="sin-registros">
-            No se encontraron registros
-          </td>
-        </tr>
-      }
-    </tbody>
-  </table>
+      <tbody class="tablaBody">
+        @for (i of inventariosFiltrados(); track $index) {
+          <tr>
+            <td>{{ i.inventario_id }}</td>
+            <td>{{ i.producto_id }}</td>
+            <td>{{ getNombreProducto(i.producto_id) }}</td>
+            <td>{{ i.cantidad }}</td>
+            <td>{{ i.stockMin }}</td>
+            <td>{{ i.precioVenta }}</td>
+            <td>{{ i.costoAdquisicion }}</td>
+
+            <td class="botones">
+              <button class="btnEliminar" (click)="deleteInventario(i.inventario_id)">Eliminar</button>
+              <button class="btnEditar" (click)="updateInventario(i)">Editar</button>
+            </td>
+          </tr>
+        } @empty {
+          <tr>
+            <td colspan="4" class="sin-registros">
+              No se encontraron registros
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </section>
