--- a/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
+++ b/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
@@ -23,43 +23,45 @@
       <button type="button" class="btn-agregar" routerLink="/menu/lotes/form"> Agregar </button>
   </div>
 
-  <table class="tabla">
-    <thead class="encabezado">
-      <tr>
-        <th>ID</th>
-        <th>Producto</th>
-        <th>Categoría</th>
-        <th>Cantidad Disponible</th>
-        <th>Costo Unitario</th>
-        <th>Fecha de Ingreso</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-
-    <tbody class="tablaBody">
-      @for(lote of lotesFiltrados(); track $index) {
+    <div class="tabla-contenedor">
+    <table class="tabla">
+      <thead class="encabezado">
         <tr>
-          <td>{{ lote.lote_id }}</td>
-
-          <td>{{ lote.producto.nombre }}</td>
-          <td>{{ lote.producto.categoria }}</td>
-
-          <td>{{ lote.cantidadDisponible }}</td>
-          <td>${{ lote.costoUnitario }}</td>
-          <td>{{ lote.fechaIngreso }}</td>
-
-          <td class="botones">
-            <button class="btnEliminar" type="button" (click)="deleteLote(lote.lote_id)">Eliminar</button>
-            <button class="btnEditar" type="button" (click)="updateLote(lote)">Editar</button>
-          </td>
+          <th>ID</th>
+          <th>Producto</th>
+          <th>Categoría</th>
+          <th>Cantidad Disponible</th>
+          <th>Costo Unitario</th>
+          <th>Fecha de Ingreso</th>
+          <th>Acciones</th>
         </tr>
-      } @empty {
-        <tr>
-          <td colspan="4" class="sin-registros">
-            No se encontraron registros
-          </td>
-        </tr>
-      }
-    </tbody>
-  </table>
+      </thead>
+
+      <tbody class="tablaBody">
+        @for(lote of lotesFiltrados(); track $index) {
+          <tr>
+            <td>{{ lote.lote_id }}</td>
+
+            <td>{{ lote.producto.nombre }}</td>
+            <td>{{ lote.producto.categoria }}</td>
+
+            <td>{{ lote.cantidadDisponible }}</td>
+            <td>${{ lote.costoUnitario }}</td>
+            <td>{{ lote.fechaIngreso }}</td>
+
+            <td class="botones">
+              <button class="btnEliminar" type="button" (click)="deleteLote(lote.lote_id)">Eliminar</button>
+              <button class="btnEditar" type="button" (click)="updateLote(lote)">Editar</button>
+            </td>
+          </tr>
+        } @empty {
+          <tr>
+            <td colspan="4" class="sin-registros">
+              No se encontraron registros
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </section>
