--- a/gestion-mercado/src/app/pages/proveedor-pages/proveedores-list/proveedores-list.html
+++ b/gestion-mercado/src/app/pages/proveedor-pages/proveedores-list/proveedores-list.html
@@ -18,40 +18,42 @@
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
-  <table class="tabla">
-    <thead class="encabezado">
-      <tr>
-        <th>ID</th>
-        <th>ID.Pr</th>
-        <th>Nombre</th>
-        <th>Edad</th>
-        <th>DNI</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-
-    <tbody class="tablaBody">
-      @for (proveedor of proveedoresFiltrados(); track $index){
-      <tr>
-        <td>{{ proveedor.personaId }}</td>
-        <td>{{ proveedor.proveedorId }}</td>
-        <td>{{ proveedor.nombre }}</td>
-        <td>{{ proveedor.edad }}</td>
-        <td>{{ proveedor.dni }}</td>
-        <td class="botones">
-          <button class="btnEliminar" (click)="eliminarProveedor(proveedor.proveedorId)">
-            Eliminar
-          </button>
-          <button class="btnEditar" (click)="modificarProveedor(proveedor)">Editar</button>
-        </td>
-      </tr>
-      } @empty {
+    <div class="tabla-contenedor">
+    <table class="tabla">
+      <thead class="encabezado">
         <tr>
-          <td colspan="4" class="sin-registros">
-            No se encontraron registros
+          <th>ID</th>
+          <th>ID.Pr</th>
+          <th>Nombre</th>
+          <th>Edad</th>
+          <th>DNI</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+
+      <tbody class="tablaBody">
+        @for (proveedor of proveedoresFiltrados(); track $index){
+        <tr>
+          <td>{{ proveedor.personaId }}</td>
+          <td>{{ proveedor.proveedorId }}</td>
+          <td>{{ proveedor.nombre }}</td>
+          <td>{{ proveedor.edad }}</td>
+          <td>{{ proveedor.dni }}</td>
+          <td class="botones">
+            <button class="btnEliminar" (click)="eliminarProveedor(proveedor.proveedorId)">
+              Eliminar
+            </button>
+            <button class="btnEditar" (click)="modificarProveedor(proveedor)">Editar</button>
           </td>
         </tr>
-      }
-    </tbody>
-  </table>
+        } @empty {
+          <tr>
+            <td colspan="4" class="sin-registros">
+              No se encontraron registros
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </section>
