--- a/gestion-mercado/src/app/pages/pedido-pages/pedidos-list/pedidos-list.html
+++ b/gestion-mercado/src/app/pages/pedido-pages/pedidos-list/pedidos-list.html
@@ -2,7 +2,7 @@
 
 
   <div class="botones">
-    <button type="button" class="btn-agregar" routerLink="/menu/pedidos/form"> Registrar PEDIDO </button>
+    <button type="button" class="btn-agregar" routerLink="/menu/pedidos/form" (click)="pedidoService.clearPedidoToEdit()"> Registrar PEDIDO </button>
 
     <select (change)="onTipoChange($event)">
       <option value="">Todos</option>
