--- a/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.css
+++ b/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.css
@@ -284,4 +284,14 @@ section.detalles .tablaBody td.botones {
     flex-direction: column;
     gap: .3rem;
   }
+
+  @media (max-width: 901px) {
+    section.detalles h2,
+    section.detalles h3 {
+      font-size: 2rem;
+      margin: 0;
+      margin-top: 1rem;
+    }
+
+  }
 }
