--- a/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.html
+++ b/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.html
@@ -66,6 +66,6 @@
     </form>
   </div>
   <div class="image">
-    <img src="assets/images/empleado.png" alt="Personaje">
+    <img src="assets/images/kobeniMc.png" alt="Personaje">
   </div>
 </div>
