--- a/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.css
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.css
@@ -13,14 +13,21 @@
 }
 
 .image img {
-  width: 80rem;
   max-width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
-    .image img {
-        max-width: 400px;
-    }
+  .image {
+    width: 30%;
+  }
+
+  .image img {
+      max-width: 100%;
+  }
+
+  .form-container {
+    gap: 1rem;
+  }
 }
 .password-input-wrapper {
   position: relative;
