--- a/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.css
+++ b/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.css
@@ -17,9 +17,17 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .image img {
-        max-width: 400px;
-    }
+  .image {
+    width: 40%;
+  }
+
+  .image img {
+      max-width: 100%;
+  }
+
+  .form-container {
+    gap: 1rem;
+  }
 }
 
 .password-input-wrapper {
