--- a/gestion-mercado/src/app/pages/lote-pages/lotes-form/lotes-form.css
+++ b/gestion-mercado/src/app/pages/lote-pages/lotes-form/lotes-form.css
@@ -16,7 +16,15 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .image img {
-        max-width: 400px;
-    }
+  .image {
+    width: 30%;
+  }
+
+  .image img {
+      max-width: 100%;
+  }
+
+  .form-container {
+    gap: 1rem;
+  }
 }
