--- a/gestion-mercado/src/app/pages/proveedor-pages/proveedores-form/proveedores-form.html
+++ b/gestion-mercado/src/app/pages/proveedor-pages/proveedores-form/proveedores-form.html
@@ -37,6 +37,6 @@
     </form>
   </div>
   <div class="image">
-    <img src="assets/images/arbol-sakura.png" alt="Personaje">
+    <img src="assets/images/proveedor.png" alt="Arbol">
   </div>
 </div>
