--- a/gestion-mercado/src/app/styles/form-style.scss
+++ b/gestion-mercado/src/app/styles/form-style.scss
@@ -28,7 +28,7 @@
   backdrop-filter: blur(20px);
   border-radius: 24px;
   padding: 3rem;
-  margin: 3rem 0;
+  margin-top: 3rem;
   width: 100%;
   max-width: 600px;
   box-shadow:
