--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.css
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.css
@@ -253,10 +253,16 @@ ul li .card-top {
   align-items: center;
   gap: 1rem;
 }
+
+ul li .image-contenedor {
+  width: 15rem;
+  height: 15rem;
+  object-fit: contain;
+}
 ul li .card-top img {
-  width: 150px;
-  height: auto;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: center;
   border-radius: 12px;
   border: 3px solid rgba(255,166,201,0.08);
 }
