--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
@@ -26,7 +26,9 @@
     @for(product of productsFiltrados(); track $index) {
       <li>
         <div class="card-top">
-         <img src={{product.url}} alt="{{product.nombre}}">
+          <div class="image-contenedor">
+            <img src={{product.url}} alt="{{product.nombre}}">
+          </div>
           <div class="card-text">
             <p class="codigo">Código producto: {{product.producto_id}}</p>
             <p class="nombre">{{product.nombre}}</p>
